# ask-auth

./: .gitignore  Cargo.toml  readme.md
examples/github_and_vipps/: Cargo.toml
examples/github_and_vipps/src/: github_provider.rs  github_provider_new.rs  main.rs  vipps_provider.rs
examples/google_and_vipps/: Cargo.toml
examples/google_and_vipps/src/: github_provider.rs  main.rs  vipps_provider.rs
src/: auth_manager.rs  auth_provider.rs  auth_router.rs  lib.rs  oauth2_manager.rs  oauth2_provider.rs  oauth2_router.rs
